--- a/css/style.css
+++ b/css/style.css
@@ -8,11 +8,11 @@
   * Accent color: #CDDC39 (LIME)
   * Accent color_text: black
   */
-
 /* GLOBAL */
-
 * {
     font-family: Roboto, 'Arial', sans-serif;
+    /* #4 use #roboto #font*/
+    /* Reset margins and paddings #heartbeat #spacing */
     margin: 0;
     padding: 0;
 }
@@ -25,17 +25,31 @@ button, strong {
     text-transform: uppercase;
 }
 
-/* LAYOUT */
+button {
+    padding: 0 16px;
+    margin: 8px;
+    background-color: white;
+    border: 0;
+    color: #3F51B5;
+    text-transform: uppercase;
+    height: 36px;
+    min-width: 64px;
+    font-size: 14px;
+    border-radius: 2px;
+}
 
+/* LAYOUT #5 #split */
 #channels {
+    /* #5 #split #left align the channels */
     position: absolute;
     height: 100%;
     width: 40%;
-
-    background-color: #3F51B5; /* temporary background color to see the effect, is completely hidden now */
+    background-color: #3F51B5;
+    /* temporary background color to see the effect, is completely hidden now */
 }
 
 #chat {
+    /* #5 #split #right align the rest */
     position: absolute;
     height: 100%;
     width: 60%;
@@ -43,6 +57,7 @@ button, strong {
 }
 
 #messages {
+    /* #5 #messages are now wrapped in a div to #scroll properly */
     position: absolute;
     width: 100%;
     top: 64px;
@@ -51,56 +66,63 @@ button, strong {
 }
 
 /* APP BAR */
-
 h1 {
     background-color: #3F51B5;
     color: white;
-
-    /* app-bar: general settings for both bars */
+    /* #5 #app-bar #general settings for both bars */
     height: 64px;
     font-size: 20px;
     font-weight: 500;
-
-    /* app-bar spacing */
+    /* #5 #app-bar spacing */
     box-sizing: border-box;
     padding: 24px 16px 20px 16px;
-
-    /* MOOCUS image alignment */
-    position: relative; /* we need this, so that the image's absolute position is relative to the app bar */
+    /* #5 MOOCUS image alignment */
+    position: relative;
+    /* we need this, so that the image's absolute position is relative to the app bar */
 }
 
 h1#left-app-bar {
+    /* #5 LEFT-APP-BAR spacing */
     padding-left: 72px;
+    z-index: 1;
 }
 
 h1#left-app-bar img {
+    /* #5 #app-bar image #bottom-align */
     position: absolute;
     left: 16px;
     bottom: 0;
 }
 
 h1 a {
+    /* #6 #channels fix the #link color in app bar*/
     color: white;
 }
 
-h1 i {
-    /* #7 #icns #str  */
-    position:absolute;
-    right: 16px;
-    /* #7 #icns #small adjust icon size */
-    font-size:24px;
+h1 #channel-star {
+    /* #6 #liking #filled  */
+    font-size: 24px;
+}
+
+h1 button {
+    position: absolute;
+    right: 0;
+    bottom: 6px;
 }
 
 /* CHANNELS LIST */
-
 ul {
     list-style-type: none;
     background-color: white;
+    /* #5 position #channels list and let it #scroll */
     position: absolute;
     width: 100%;
-    top: 64px; /* the app bar's height */
-    bottom: 72px; /* the tab bar's height */
-    overflow-y: auto; /* this adds scroll bars on demand */
+    top: 64px;
+    /* the app bar's height */
+    bottom: 72px;
+    /* the tab bar's height */
+    overflow-y: auto;
+    /* this adds scroll bars on demand */
 }
 
 li {
@@ -109,40 +131,21 @@ li {
     padding: 16px;
     font-size: 16px;
     border-bottom: 1px solid #F5F5F5;
+    /* #5 #channels position channel-meta #icons within the li needs relative positioning (relative stops absolute) */
     position: relative;
 }
 
 li .channel-meta {
-    /* right-align channel-meta icons */
+    /* #5 #channels right-align channel-meta #icons absolute = relative to li */
     position: absolute;
     right: 16px;
     top: 12px;
-
-    /* #8 #channel #centered blue boxes */
-    display:flex;
 }
 
-li .channel-meta span {
-    /* #8 #channel #boxes for the additional metadata */
-    /* color */
-    background-color: #3F51B5;
-    color: white;
-    /* appearance */
-    margin: 2px;
-    padding: 2px;
-    border-radius: 2px;
-    font-size: 10px;
-
-    /* #8 #channel #centered blue boxes' text content */
-    align-self:center;
-}
-
-li i.fas, li i.far  {
-    /* #7 #icns #small in channels view */
+li i {
     font-size: 24px;
-    padding-left: 4px;
+    padding: 0px 2px;
 }
-
 
 li.selected {
     color: #3F51B5;
@@ -150,25 +153,31 @@ li.selected {
 }
 
 /* TAB BAR */
-
+/* #5 #smileys #lazy: we can reuse most of the tab-bar's styles for the chat-bar */
 #tab-bar, #chat-bar {
     background-color: white;
     text-align: center;
+    /* #5 #tab-bar #bottom */
     position: absolute;
     bottom: 0;
     width: 100%;
+    /* #5 #tab-bar #flexify the buttons*/
     display: flex;
+    height: 72px;
+    align-items: center;
 }
 
-#tab-bar button, #chat-bar button {
-    background-color: white;
+#tab-bar {
+    z-index: 1;
+}
+
+/* #5 #smileys #lazy: we can reuse most of the tab-bar buttons' styles for the chat-bar buttons */
+#tab-bar button {
     border: none;
-    font-size: 13px;
     width: 33%;
     height: 72px;
-    padding: 16px;
-
-    /* flexify the buttons by growing them equally */
+    margin: 0;
+    /* #5 #tab-bar #flexify the buttons by growing them equally */
     flex-grow: 1;
 }
 
@@ -178,29 +187,23 @@ li.selected {
 }
 
 #tab-bar button i {
-    /* #7 #icns #tab select i instead of img and adjust font size */
     display: block;
-    font-size: 24px;
     margin: 0 auto 4px auto;
+    font-size: 24px;
 }
 
-/* CHAT BAR */
-
+/* #5 CHAT BAR */
 #chat-bar button {
-    /* override button styles. We set the chat bar to appear like a tab-bar above. This overrides the tab bar's button scaling */
+    /* #5 #smileys #override button styles. We set the chat bar to appear like a tab-bar above. This overrides the tab bar's button scaling */
     width: auto;
     flex-grow: 0;
-
-    /* #7 #icns #smile adjust fa size */
-    font-size: 24px;
 }
 
 #emojis {
-    /* emoji menu */
+    /* #5 #smileys #emojis menu */
     /* colors and borders */
-    background-color:white;
+    background-color: white;
     border: 1px solid black;
-
     /* size & alignment */
     position: absolute;
     box-sizing: border-box;
@@ -209,41 +212,38 @@ li.selected {
     left: 16px;
     top: -284px;
     padding: 16px;
-
     /* font and left-align text */
     text-align: left;
     font-size: 28px;
-
     /* scroll when it has too many emojis */
     overflow-y: auto;
-
-    /* hide the #smile menu */
+    /* #6 #hide the #smile menu */
     display: none;
 }
 
-/* #8 #input #styles for font, border, and alignment */
-#chat-bar input {
-    /* styles */
-    font-size: 16px;
-    border: none;
-    /* alignment */
-    flex-grow: 1;
+#emojis-button .fa-smile {
+    font-size: 24px;
+    justify-content: flex-start;
+}
+
+#send-message .fa-arrow-right {
+    font-size: 24px;
+    justify-content: flex-end;
 }
 
 /* MESSAGES */
-
 .message {
     width: 80%;
     margin-bottom: 8px;
-    margin-left: 2.5%;
+    margin-left: 20px;
+    /* #5 #messages #reposition right/bottom alignment of button relative to the chat message (stops absolute) */
     position: relative;
 }
 
 .message h3 {
     /* Message-meta medium-sized text, non-italic */
     font-size: medium;
-
-    /* messages distribute metadata content evenly with flexbox */
+    /* #5 #messages distribute metadata content evenly by flexbox #tweaks */
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
@@ -252,7 +252,7 @@ li.selected {
 .message h3 a {
     /* What3words link is primary test */
     color: black;
-
+    /* #5 #messages #column fixing width of w3w and time lets the date appear in a column I */
     width: 30%;
 }
 
@@ -260,7 +260,7 @@ li.selected {
     /* Larger text, non-italic*/
     font-size: larger;
     font-style: normal;
-
+    /* #5 #messages #column fixing width of w3w and time lets the date appear in a column II */
     width: 20%;
     text-align: right;
 }
@@ -268,20 +268,118 @@ li.selected {
 .message p {
     background-color: white;
     padding: 16px;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
 }
 
 .message button {
-    /* +5 min. button*/
-    background-color: #CDDC39;
-    color: black;
-    text-transform: uppercase;
-
-    /* right/bottom alignment of button */
+    /* #5 #messages #reposition right/bottom alignment of button */
     position: absolute;
-    right: 8px;
-    bottom: 8px;
+    right: 0;
+    bottom: 0;
 }
 
 .message.own {
-    margin-left: 17.5%;
+    margin-left: calc(20% - 20px);
+}
+
+#message-input {
+    border: none;
+    font-size: 16px;
+    flex-grow: 1;
+    width: 100%;
+}
+
+.primary {
+    background-color: #3F51B5;
+    color: white;
+}
+
+.accent {
+    background-color: #CDDC39;
+    color: black;
+}
+
+button.accent:hover {
+    background-color: #9ba91e;
+}
+
+button.primary:hover {
+    background-color: #2c387d;
+}
+
+button:focus {
+    outline: 0;
+}
+
+input:focus {
+    outline: 0;
+}
+
+#fab {
+    width: 56px;
+    height: 56px;
+    border-radius: 50%;
+    position: absolute;
+    bottom: 88px;
+    right: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#fab p {
+    font-size: 30px;
+}
+
+.message:not(.own) p::before {
+    content: ' ';
+    display: inline-block;
+    position: absolute;
+    left: -20px;
+    top: 23px;
+    width: 0;
+    height: 0;
+    border-bottom: 20px solid transparent;
+    border-right: 20px solid white;
+
+}
+
+.own p::after {
+    content: ' ';
+    display: inline-block;
+    position: absolute;
+    right:  -20px;
+    top: 23px;
+    width: 0;
+    height: 0;
+    border-bottom: 20px solid transparent;
+    border-left: 20px solid white;
+}
+
+.shadow--2dp {
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+}
+
+.shadow--3dp {
+    box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.14), 0 3px 3px -2px rgba(0, 0, 0, 0.2), 0 1px 8px 0 rgba(0, 0, 0, 0.12);
+}
+
+.shadow--4dp {
+    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.2);
+}
+
+.shadow--6dp {
+    box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12), 0 3px 5px -1px rgba(0, 0, 0, 0.2);
+}
+
+.shadow--8dp {
+    box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12), 0 5px 5px -3px rgba(0, 0, 0, 0.2);
+}
+
+.shadow--16dp {
+    box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
+}
+
+.shadow--24dp {
+    box-shadow: 0 9px 46px 8px rgba(0, 0, 0, 0.14), 0 11px 15px -7px rgba(0, 0, 0, 0.12), 0 24px 38px 3px rgba(0, 0, 0, 0.2);
 }
